--- a/FastGenData/Cargo.toml
+++ b/FastGenData/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.0.26", features=["derive"]}
 color-eyre = "0.6.2"
 image = "0.24.5"
 imageproc = "0.23.0"
